--- a/SPServer/SPServer.vcxproj.filters
+++ b/SPServer/SPServer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="singledata.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CBufferRing.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="singledata.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CBufferRing.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
